--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,6 @@
     <dimen name="login_margin">10dp</dimen>
     <dimen name="zero_dp">0dp</dimen>
     <dimen name="login_text_size">12sp</dimen>
+    <dimen name="lorem_ipsum_size">50dp</dimen>
 
 </resources>
