--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -36,5 +36,14 @@
         app:layout_constraintTop_toBottomOf="@id/btnShowView"
         />
 
+    <Button
+        android:id="@+id/btnSettings"
+        android:backgroundTint="@color/black"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/home_settings"
+        app:layout_constraintTop_toBottomOf="@id/btnDial"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
