--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -45,5 +45,21 @@
         app:layout_constraintTop_toBottomOf="@id/btnDial"
         />
 
+    <TextView
+        android:id="@+id/txtMessage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/login_margin"
+        app:layout_constraintTop_toBottomOf="@id/btnSettings"
+        />
+
+    <TextView
+        android:id="@+id/txtError"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/login_margin"
+        app:layout_constraintTop_toBottomOf="@id/txtMessage"
+        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
