--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,18 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 <item
     android:id="@+id/menuOption1"
     android:title="@string/menu_option1"
-    android:onClick="showPage"
+    android:icon="@drawable/ic_menu_web"
+    app:showAsAction="ifRoom"
     />
     <item
         android:id="@+id/menuOption2"
         android:title="@string/menu_option2"
-        android:onClick="dialPhoneNumber"
         />
     <item
         android:id="@+id/menuOption3"
         android:title="@string/menu_option3"
-        android:onClick="showSettings"
         />
+
+    <item
+        android:id="@+id/submenu1"
+        android:title="@string/menu_sub1"
+        android:icon="@drawable/ic_menu_submenu"
+        app:showAsAction="ifRoom"
+        >
+        <menu>
+            <item
+                android:id="@+id/subMenuOption1"
+                android:title="@string/menu_sub_option1"
+                />
+        </menu>
+    </item>
 </menu>
