--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -45,7 +45,7 @@
         android:id="@+id/txtMenuContext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/login_margin"
+        style="@style/textStyle"
         android:text="@string/lorem_ipsum"
         app:layout_constraintTop_toBottomOf="@id/txtName"
         />
