--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,5 +7,7 @@
     <dimen name="zero_dp">0dp</dimen>
     <dimen name="login_text_size">14sp</dimen>
     <dimen name="lorem_ipsum_size">50dp</dimen>
+    <dimen name="radius">8dp</dimen>
+    <dimen name="elevation">10dp</dimen>
 
 </resources>
